# HarvestDashboard

./: .gitignore  app.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
harvest/: config.py
harvest/agents/: __init__.py  summarizer.py
harvest/components/: __init__.py  kpi_row.py  sidebar.py  styles.py  tab_client.py  tab_employee.py  tab_overview.py  tab_pivot.py  tab_summary.py
harvest/config/: __init__.py  model.py
harvest/instructions/: summarizer.md
harvest/models/: __init__.py
harvest/utils/: __init__.py  constants.py  data_loader.py  date_helpers.py  load_env.py
